--- a/notebooks/analysis/9_fasta_experiments.ipynb
+++ b/notebooks/analysis/9_fasta_experiments.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-02 16:14:40.292251: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-08-02 16:14:40.292287: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-08-02 16:14:40.292298: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "from denovo_utils.parsers.io.fasta import FastaHandler\n",
+    "from denovo_utils.parsers.constants import EXTENSIONS\n",
+    "from denovo_utils.analysis.metaproteomics import count_analysis\n",
+    "\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "\n",
+    "root_results = \"/home/samva/Doctorate/data_directory/denovo_project/denovo_results\"\n",
+    "engine = \"sage\"\n",
+    "filename = \"S03\"\n",
+    "\n",
+    "root_results_filtered = os.path.join(root_results, \"psmlists/df\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,45 +59,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. Parse a fasta file\n",
-    "\n",
-    "Based on the OS element"
+    "# 0. Parse a fasta file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "tqdm.pandas()\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "from denovo_utils.parsers.io.fasta import FastaReader\n",
-    "from denovo_utils.parsers.constants import EXTENSIONS\n",
-    "from denovo_utils.analysis.metaproteomics import count_analysis\n",
-    "\n",
-    "from Bio import SeqIO\n",
-    "\n",
-    "\n",
-    "root_results = \"/home/samva/Doctorate/data_directory/denovo_project/denovo_results\"\n",
-    "engine = \"sage\"\n",
-    "filename = \"S03\"\n",
-    "\n",
-    "root_results_filtered = os.path.join(root_results, \"psmlists/df\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +206,7 @@
        "7            source:PXD023217           NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,13 +296,13 @@
        "1  (M, I, T, T, V, T, L, N, A, S, I, D, K, A, Y, ...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fasta = FastaReader()\n",
+    "fasta = FastaHandler()\n",
     "fasta.read(\n",
     "    os.path.join(\n",
     "        root_fasta,\n",
@@ -309,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +335,231 @@
        "Name: organism, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fasta.dataframe.organism.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0.2. Split up the fasta file by removing one species from it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>protein_id</th>\n",
+       "      <th>protein_id_full</th>\n",
+       "      <th>protein_description</th>\n",
+       "      <th>organism</th>\n",
+       "      <th>gene_name</th>\n",
+       "      <th>protein_existence</th>\n",
+       "      <th>sequence_version</th>\n",
+       "      <th>sequence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TrEMBL</td>\n",
+       "      <td>B0MEB3</td>\n",
+       "      <td>tr|B0MEB3|B0MEB3_9FIRM</td>\n",
+       "      <td>Ribonuclease HII</td>\n",
+       "      <td>Anaerostipes caccae DSM 14662</td>\n",
+       "      <td>rnhB</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(M, R, E, E, S, Y, R, E, A, L, M, T, K, Q, E, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TrEMBL</td>\n",
+       "      <td>B0MBJ7</td>\n",
+       "      <td>tr|B0MBJ7|B0MBJ7_9FIRM</td>\n",
+       "      <td>Tagatose-6-phosphate kinase</td>\n",
+       "      <td>Anaerostipes caccae DSM 14662</td>\n",
+       "      <td>pfkB</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(M, I, T, T, V, T, L, N, A, S, I, D, K, A, Y, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     name protein_id         protein_id_full          protein_description  \\\n",
+       "0  TrEMBL     B0MEB3  tr|B0MEB3|B0MEB3_9FIRM             Ribonuclease HII   \n",
+       "1  TrEMBL     B0MBJ7  tr|B0MBJ7|B0MBJ7_9FIRM  Tagatose-6-phosphate kinase   \n",
+       "\n",
+       "                        organism gene_name protein_existence sequence_version  \\\n",
+       "0  Anaerostipes caccae DSM 14662      rnhB                 3                1   \n",
+       "1  Anaerostipes caccae DSM 14662      pfkB                 3                1   \n",
+       "\n",
+       "                                            sequence  \n",
+       "0  (M, R, E, E, S, Y, R, E, A, L, M, T, K, Q, E, ...  \n",
+       "1  (M, I, T, T, V, T, L, N, A, S, I, D, K, A, Y, ...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row = fasta.dataframe.loc[0]\n",
+    "fasta.dataframe.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.SeqIO import SeqRecord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_record = SeqIO.parse(os.path.join(\n",
+    "        root_fasta,\n",
+    "        \"SIHUMI_DB1UNIPROT.fasta\"\n",
+    "    ), format=\"fasta\")\n",
+    "for entry in seq_record:\n",
+    "    entry_parsed = fasta._parse_fasta_header(entry.description)\n",
+    "    break\n",
+    "\n",
+    "entry_parsed = {k:[v] for k, v in entry_parsed.items()}\n",
+    "entry_parsed[\"sequence\"] = [entry.seq]\n",
+    "row = pd.DataFrame(entry_parsed).loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefix_mapping = {\n",
+    "    \"protein_id_full\": \"\",\n",
+    "    \"protein_description\": \"\",\n",
+    "    \"organism\": \"OS=\",\n",
+    "    \"gene_name\": \"GN=\",\n",
+    "    \"protein_existence\": \"PE=\",\n",
+    "    \"sequence_version\": \"SV=\"\n",
+    "}\n",
+    "\n",
+    "def row_to_seqrecord(row):\n",
+    "    sequence = row[\"sequence\"]\n",
+    "    id_ = row[\"protein_id_full\"]\n",
+    "    name= row[\"protein_id_full\"]\n",
+    "    description_list = []\n",
+    "    for col in [\n",
+    "        \"protein_id_full\",\n",
+    "        \"protein_description\",\n",
+    "        \"organism\",\n",
+    "        \"gene_name\",\n",
+    "        \"protein_existence\",\n",
+    "        \"sequence_version\"\n",
+    "    ]:\n",
+    "        value = row[col]\n",
+    "        if value:\n",
+    "            description_list.append(prefix_mapping[col]+row[col])\n",
+    "    description = \" \".join(description_list)\n",
+    "    return SeqRecord(\n",
+    "        seq=sequence,\n",
+    "        id=id_,\n",
+    "        name=name,\n",
+    "        description=description\n",
+    "    )\n",
+    "\n",
+    "seqrecord_series = fasta.dataframe.apply(row_to_seqrecord, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29673,)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seqrecord_series.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'species'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'species'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m seqrecord_series[\u001b[43mfasta\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataframe\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mspecies\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m==\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContaminant\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'species'"
+     ]
+    }
+   ],
+   "source": [
+    "seqrecord_series[fasta.dataframe[\"species\"]==[\"Contaminant\"]]"
    ]
   },
   {
