Refactoring and documenting pt1

--- a/notebooks/analysis/9_fasta_experiments.ipynb
+++ b/notebooks/analysis/9_fasta_experiments.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-02 16:14:40.292251: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-08-02 16:14:40.292287: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-08-02 16:14:40.292298: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-08-02 18:43:24.368649: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-08-02 18:43:24.368685: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-08-02 18:43:24.368695: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -30,6 +30,7 @@
     "from denovo_utils.parsers.io.fasta import FastaHandler\n",
     "from denovo_utils.parsers.constants import EXTENSIONS\n",
     "from denovo_utils.analysis.metaproteomics import count_analysis\n",
+    "from denovo_utils.utils.pandas import get_species_specificity, count_species_peptides\n",
     "\n",
     "from Bio import SeqIO\n",
     "\n",
@@ -60,6 +61,13 @@
    "metadata": {},
    "source": [
     "# 0. Parse a fasta file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0.1 Read fasta file"
    ]
   },
   {
@@ -437,7 +445,6 @@
     }
    ],
    "source": [
-    "row = fasta.dataframe.loc[0]\n",
     "fasta.dataframe.head(2)"
    ]
   },
@@ -445,121 +452,49 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Bio.SeqIO import SeqRecord"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq_record = SeqIO.parse(os.path.join(\n",
-    "        root_fasta,\n",
-    "        \"SIHUMI_DB1UNIPROT.fasta\"\n",
-    "    ), format=\"fasta\")\n",
-    "for entry in seq_record:\n",
-    "    entry_parsed = fasta._parse_fasta_header(entry.description)\n",
-    "    break\n",
-    "\n",
-    "entry_parsed = {k:[v] for k, v in entry_parsed.items()}\n",
-    "entry_parsed[\"sequence\"] = [entry.seq]\n",
-    "row = pd.DataFrame(entry_parsed).loc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prefix_mapping = {\n",
-    "    \"protein_id_full\": \"\",\n",
-    "    \"protein_description\": \"\",\n",
-    "    \"organism\": \"OS=\",\n",
-    "    \"gene_name\": \"GN=\",\n",
-    "    \"protein_existence\": \"PE=\",\n",
-    "    \"sequence_version\": \"SV=\"\n",
-    "}\n",
-    "\n",
-    "def row_to_seqrecord(row):\n",
-    "    sequence = row[\"sequence\"]\n",
-    "    id_ = row[\"protein_id_full\"]\n",
-    "    name= row[\"protein_id_full\"]\n",
-    "    description_list = []\n",
-    "    for col in [\n",
-    "        \"protein_id_full\",\n",
-    "        \"protein_description\",\n",
-    "        \"organism\",\n",
-    "        \"gene_name\",\n",
-    "        \"protein_existence\",\n",
-    "        \"sequence_version\"\n",
-    "    ]:\n",
-    "        value = row[col]\n",
-    "        if value:\n",
-    "            description_list.append(prefix_mapping[col]+row[col])\n",
-    "    description = \" \".join(description_list)\n",
-    "    return SeqRecord(\n",
-    "        seq=sequence,\n",
-    "        id=id_,\n",
-    "        name=name,\n",
-    "        description=description\n",
-    "    )\n",
-    "\n",
-    "seqrecord_series = fasta.dataframe.apply(row_to_seqrecord, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(29673,)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seqrecord_series.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'species'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'species'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m seqrecord_series[\u001b[43mfasta\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataframe\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mspecies\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m==\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContaminant\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n",
-      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'species'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Anaerostipes_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Erysipelatoclostridium_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Contaminant_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Bacteroides_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Clostridium_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Lactobacillus_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Escherichia_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Bifidobacterium_SIHUMI_DB1UNIPROT.fasta.\n",
+      "Written fasta to /home/samva/Doctorate/data_directory/fasta/del_Blautia_SIHUMI_DB1UNIPROT.fasta.\n"
      ]
     }
    ],
    "source": [
-    "seqrecord_series[fasta.dataframe[\"species\"]==[\"Contaminant\"]]"
+    "from itertools import combinations\n",
+    "\n",
+    "organisms = set(fasta.organisms)\n",
+    "organism_combinations = list(combinations(\n",
+    "    organisms,\n",
+    "    len(organisms)-1\n",
+    "))\n",
+    "\n",
+    "# Store the combination of organisms in dict with key the deleted organism\n",
+    "organism_fasta_dict = {}\n",
+    "for organism_combination in organism_combinations:\n",
+    "    organism_combination_list = list(organism_combination)\n",
+    "    for organism in organisms:\n",
+    "        if organism not in organism_combination:\n",
+    "            organism_fasta_dict[organism.split()[0]] = organism_combination_list\n",
+    "            continue\n",
+    "\n",
+    "for deleted_organism, organism_combination in organism_fasta_dict.items():\n",
+    "    boolean_filter = fasta.dataframe[\"organism\"].isin(organism_combination)\n",
+    "    out_path = os.path.join(root_fasta, f\"del_{deleted_organism}_SIHUMI_DB1UNIPROT.fasta\")\n",
+    "    fasta.write(\n",
+    "        boolean_filter=boolean_filter,\n",
+    "        out_path=out_path\n",
+    "    )\n",
+    "    print(\"Written fasta to {}.\".format(out_path))"
    ]
   },
   {
@@ -1140,9 +1075,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "ename": "PeptidoformException",
+     "evalue": "Could not parse ProForma sequence: mdksjf",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProFormaError\u001b[0m                             Traceback (most recent call last)",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/psm_utils/peptidoform.py:44\u001b[0m, in \u001b[0;36mPeptidoform.__init__\u001b[0;34m(self, proforma_sequence)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 44\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparsed_sequence, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproperties \u001b[38;5;241m=\u001b[39m \u001b[43mproforma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproforma_sequence\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m proforma\u001b[38;5;241m.\u001b[39mProFormaError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/pyteomics/proforma.py:1637\u001b[0m, in \u001b[0;36mparse\u001b[0;34m(sequence)\u001b[0m\n\u001b[1;32m   1636\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1637\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ProFormaError(\n\u001b[1;32m   1638\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError In State \u001b[39m\u001b[38;5;132;01m{state}\u001b[39;00m\u001b[38;5;124m, unexpected \u001b[39m\u001b[38;5;132;01m{c}\u001b[39;00m\u001b[38;5;124m found at index \u001b[39m\u001b[38;5;132;01m{i}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mlocals\u001b[39m()), i, state)\n\u001b[1;32m   1639\u001b[0m \u001b[38;5;66;03m# The body of the amino acid sequence.\u001b[39;00m\n",
+      "\u001b[0;31mProFormaError\u001b[0m: Pyteomics error, message: 'Error In State ParserStateEnum.before_sequence, unexpected m found at index 1' ('Error In State ParserStateEnum.before_sequence, unexpected m found at index 1', 1, <ParserStateEnum.before_sequence: 0>)",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mPeptidoformException\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpsm_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Peptidoform\n\u001b[0;32m----> 2\u001b[0m \u001b[43mPeptidoform\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmdksjf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/denovo_analysis_env/lib/python3.11/site-packages/psm_utils/peptidoform.py:46\u001b[0m, in \u001b[0;36mPeptidoform.__init__\u001b[0;34m(self, proforma_sequence)\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparsed_sequence, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproperties \u001b[38;5;241m=\u001b[39m proforma\u001b[38;5;241m.\u001b[39mparse(proforma_sequence)\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m proforma\u001b[38;5;241m.\u001b[39mProFormaError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 46\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m PeptidoformException(\n\u001b[1;32m     47\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not parse ProForma sequence: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproforma_sequence\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     48\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(proforma_sequence, proforma\u001b[38;5;241m.\u001b[39mProForma):\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparsed_sequence \u001b[38;5;241m=\u001b[39m proforma_sequence\u001b[38;5;241m.\u001b[39msequence\n",
+      "\u001b[0;31mPeptidoformException\u001b[0m: Could not parse ProForma sequence: mdksjf"
+     ]
+    }
+   ],
+   "source": [
+    "from psm_utils import Peptidoform\n",
+    "Peptidoform(\"mdksjf\")"
+   ]
   }
  ],
  "metadata": {
