--- a/notebooks/analysis/part_1/9_fasta_experiments.ipynb
+++ b/notebooks/analysis/part_1/9_fasta_experiments.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modification already exists in ModificationsDB. Skipping.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-22 13:15:54.899210: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-08-22 13:15:54.899253: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-08-22 13:15:54.899274: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -25,6 +42,7 @@
     "from denovo_utils.parsers import DenovoEngineConverter\n",
     "from denovo_utils.analysis.metaproteomics import count_analysis\n",
     "from denovo_utils.utils.pandas import get_decoy_status, get_species_specificity, count_species_peptides, get_psm_type\n",
+    "import numpy as np\n",
     "\n",
     "from Bio.SeqRecord import SeqRecord\n",
     "\n"
@@ -73,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +233,7 @@
        "7            source:PXD023217           NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +323,7 @@
        "1  (M, I, T, T, V, T, L, N, A, S, I, D, K, A, Y, ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,6 +340,43 @@
     "fasta_organism_protein_dict = fasta.to_dict(key=\"organism\", value=\"protein_id_full\")\n",
     "\n",
     "fasta.dataframe.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Anaerostipes caccae DSM 14662',\n",
+       " 'Bacteroides thetaiotaomicron (strain ATCC 29148 / DSM 2079 / NCTC 10582 / E50 / VPI-5482)',\n",
+       " 'Bifidobacterium longum (strain NCC 2705)',\n",
+       " 'Blautia sp. YL58',\n",
+       " 'Clostridium butyricum E4 str. BoNT E BL5262',\n",
+       " 'Contaminant',\n",
+       " 'Erysipelatoclostridium ramosum DSM 1402',\n",
+       " 'Escherichia coli (strain K12)',\n",
+       " 'Lactobacillus plantarum (strain ATCC BAA-793 / NCIMB 8826 / WCFS1)'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(fasta.organisms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "presence = [\"VDYALDVDVPDENLVNR\" in str(i).replace(\"I\", \"L\") for i in fasta.dataframe[(np.array(fasta.organisms)==\"Blautia sp. YL58\")].sequence.tolist()]"
    ]
   },
   {
